# FastAPI-Python

./: .coverage  database.db  pyproject.toml
migrations/versions/: 139bb402ebfc_exercicio_02_aula_04.py  fc3b1cfd8098_create_users_table.py
src/fast_zero/: app.py  models.py  schemas.py  settings.py
tests/: conftest.py  test_app.py  test_db.py
